# estudo_fundamentos

./: .gitignore  pyproject.toml
programacao/solid/: shopping_cart.py  solid.ipynb  solid_in_ML_projects.ipynb
programacao/solid/tests/: test_shopping_cart.py
